--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,9 +1,9 @@
 Package: customSC
 Type: Package
-Title: What the Package Does (Title Case)
-Version: 0.1.2
+Title: Custom functions for single cell transcriptomics analysis
+Version: 0.0.1
 Author: Who wrote it
-Maintainer: The package maintainer <yourself@somewhere.net>
+Maintainer: Kevin Leiss <k.leiss@zmbh.uni-heidelberg.de>
 Description: More about what it does (maybe more than one line)
     Use four spaces when indenting paragraphs within the Description.
 License: What license is it under?
